<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/root"
    android:padding="16dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discreet_safety_tools_at_your_fingertips"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnFakeCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trigger_fake_call" />

    <Button
        android:id="@+id/btnIncidentLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_incident_log" />

    <Button
        android:id="@+id/btnOpenUserSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_settings" />
</LinearLayout>
