<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/fake_call_gradient">

    <TextView
        android:id="@+id/textIncomingCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/incoming_call"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textIncomingCallNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_phonenumber"
        android:textColor="@color/white"
        android:textSize="45sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/united_states"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnDecline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Decline" />
</LinearLayout>
